NIFI-15641 Add FinalParameters and FinalLocalVariable checkstyle rules
Added FinalParameters and FinalLocalVariable checks to checkstyle configuration
and fixed all violations across the codebase. Parameters and local variables
that can be declared final are now declared final. For parameters that are
reassigned, applied the *Arg pattern (rename parameter, introduce local variable)
to satisfy the checkstyle rule without changing behavior.